# eeper

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSING.md  MASTER_PLAN.md  Makefile  PROGRESS.md  README.md  TRADEMARKS.md  commitlint.config.js  package-lock.json  package.json  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: audio.yml  bench.yml  ci.yml  firmware.yml  fixtures.yml  harness.yml  images.yml  stack.yml
adapters/: README.md
adapters/audio/: Dockerfile  entrypoint.sh
adapters/csi/: Dockerfile  entrypoint.sh
adapters/usb/: Dockerfile  entrypoint.sh
deploy/: .env.example  LITE.md  README.md  adapter-test.yml  audio-adapter-test.yml  backup.sh  docker-compose.lite.yml  docker-compose.yml  eeper-down.sh  eeper-up.sh  gen-mqtt-security.sh  insight-motion-test.yml  insight-test.yml  install.sh  recorder-test.yml  restore.sh  video-test.yml
deploy/caddy/: Caddyfile  Dockerfile
deploy/go2rtc/: go2rtc.yaml
deploy/harness/: README.md  docker-compose.yml
deploy/harness/mosquitto/: mosquitto.conf
deploy/harness/sensor-fleet/: Dockerfile  publish.py
deploy/harness/synthetic-camera/: mediamtx.yml
deploy/harness/tests/: test_harness.py
deploy/mosquitto/: mosquitto.conf
deploy/tests/: test_stack.py
deploy/tests/audio/: test_audio_pipeline.py  test_mic_adapter.py
deploy/tests/fixtures/audio/: tone_1k.json
deploy/tests/insight/: conftest.py  test_backpressure.py  test_motion_pipeline.py  test_nudge_pipeline.py  test_sound_pipeline.py
deploy/tests/sensors/: test_sensors.py
deploy/tests/video/: test_cameras.py  test_recorder.py  test_usb_adapter.py
docs/: IMPLEMENTATION_PLAN.md  MASTER_PLAN.md  PROGRESS.md  README.md  ci.md  development.md  hardware.md  install.md  performance.md  prior-art.md  thermal-node.md
docs/adapters/: phone-rtsp.md
docs/operations/: backup-restore.md  security-review.md  verifying-images.md
docs/reference-builds/: pi4-all-in-one.md
docs/testing/: README.md  m0.2-ca-trust.md
firmware/: LICENSE  PROVISIONING.md  README.md
firmware/esphome/: README.md  eeper-mmwave.yaml  eeper-pir.yaml  secrets.yaml.example
firmware/esphome/common/: eeper-base.yaml
firmware/micropython/: README.md  eeper_node.py  eeper_pulseox_node.py
firmware/tests/: test_firmware_contract.py
firmware/tests/payloads/: mmwave_movement.json  mmwave_presence.json  pir_movement.json  pulseox.json
fixtures/: PROVENANCE.md  README.md  manifest.json  pyproject.toml
fixtures/eeper_fixtures/: __init__.py  build.py  checks.py  cli.py  fetch.py  generate.py  longform.py  manifest.py  provenance.py
fixtures/tests/: test_checks.py  test_fetch.py  test_manifest.py
fixtures/tools/: build_manifest.py
models/: README.md  convert_yamnet.py  cryeval.py  manifest.json
scripts/: bench.py  docs_install_smoke.sh
server/: .dockerignore  Dockerfile  README.md  pyproject.toml
server/eeper/: __init__.py  health.py
server/eeper/api/: __init__.py  auth_service.py  camera_monitor.py  clip_service.py  clock.py  config.py  cookies.py  db.py  dependencies.py  event_hub.py  fusion_read.py  fusion_signals.py  fusion_worker.py  gateway.py  ingestion.py  main.py  models.py  mqtt_provisioner.py  nudge_worker.py  probe.py  pulseox_copy.py  pulseox_ingestion.py  push_service.py  schemas.py  security.py  thermal_ingestion.py  thermal_relay.py  tokens.py
server/eeper/api/routers/: account.py  audio.py  auth.py  cameras.py  clips.py  devices.py  events.py  fusion.py  pulseox.py  system.py  thermal.py  tokens.py  trends.py  users.py
server/eeper/fusion/: README.md  __init__.py  epochs.py  model.py  replay.py  sessions.py  state.py  synth.py
server/eeper/insight/: __init__.py  __main__.py  audio.py  cry.py  frame.py  frontend.py  modelfetch.py  motion.py  motion_tap.py  mqtt.py  registry.py  sound.py  state_writer.py  supervisor.py  tap.py  video.py  window.py
server/eeper/recorder/: __init__.py  __main__.py  layout.py  record.py  retention.py  supervisor.py
server/eeper/thermal/: __init__.py  __main__.py  features.py  node.py  publisher.py  sensor.py
server/scripts/: clinical_terms_lint.py
server/tests/: conftest.py  test_account_api.py  test_audio_stream.py  test_auth_api.py  test_auth_fuzzing.py  test_clinical_terms_lint.py  test_events_api.py  test_fusion_corroboration.py  test_fusion_degradation.py  test_fusion_epochs.py  test_fusion_replay.py  test_fusion_sessions.py  test_fusion_state.py  test_fusion_timeline_api.py  test_fusion_worker.py  test_health.py  test_insight.py  test_lite_mode.py  test_nudge_worker.py  test_pulseox_api.py  test_pulseox_ingest.py  test_push_send.py  test_push_service.py  test_retention.py  test_retention_timeseries.py  test_security.py  test_sensor_ingestion.py  test_thermal_api.py  test_thermal_contract.py  test_thermal_features.py  test_thermal_ingest.py  test_thermal_node.py  test_thermal_publisher.py  test_thermal_relay.py  test_tokens.py  test_trends.py  test_trends_api.py
server/tests/insight/: gen_fixtures.py  test_cry.py  test_frame_ring.py  test_frontend.py  test_modelfetch.py  test_motion.py  test_registry.py  test_sound.py  test_state.py
server/tests/insight/fixtures/frontend/: patches.npy  waveform.npy
web/: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  eslint.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
web/e2e/: clips.spec.ts  devices.spec.ts  live.spec.ts  pulseox.spec.ts  roles.spec.ts  timeline.spec.ts  tonight.spec.ts  trends.spec.ts  wizard.spec.ts
web/src/: app.css  app.html
web/src/lib/: AudioMonitor.svelte  BarChart.svelte  CameraView.svelte  ThermalHeatmap.svelte  api.ts  live-inputs.test.ts  live-inputs.ts  push.ts  realtime.ts  theme.ts  thermal.ts  webrtc.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/devices/: +page.svelte
web/src/routes/live/: +page.svelte
web/static/: push-sw.js  robots.txt
(+5 files in other folders)
