[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeper"
version = "0.0.0"
description = "eeper server-side services (api, insight-engine, recorder)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD — see repository README" }
dependencies = [
  "fastapi>=0.115,<0.200",
  # Floor Starlette to the CVE-2025-62727 fix: the O(n^2) Range-header parser is
  # reachable by any authed viewer on the clip playback route (FileResponse Range).
  "starlette>=0.49.1",
  "uvicorn[standard]>=0.32,<1.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.30,<0.40",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "argon2-cffi>=23.1,<26.0",
  "pyjwt>=2.9,<3.0",
  "pyotp>=2.9,<3.0",
  "httpx>=0.27,<1.0", # async client for the go2rtc media gateway
  "paho-mqtt>=2.0,<3.0", # MQTT client for insight event publishing (M2.2)
  "numpy>=1.26,<3", # log-mel audio frontend for the cry classifier (M2.3)
  "onnxruntime>=1.19,<2", # CPU inference for the YAMNet-class cry model (M2.3)
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "httpx>=0.27,<1.0",
  "testcontainers>=4.0,<5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eeper*"]

# ─── Ruff (lint + format) ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
# A pragmatic-but-strict default set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, simplify, and flake8-bandit (security). Expanded
# per-package as code lands.
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "S"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"] # asserts + test credentials are expected in tests

# ─── mypy (strict) ─────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["eeper", "tests"]

[[tool.mypy.overrides]]
# These libraries don't ship type information.
module = ["pyotp.*", "testcontainers.*"]
ignore_missing_imports = true

# ─── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
